# ip6_graph_db

./: .gitignore  .pre-commit-config.yaml  README.md  create_demo  cypher.py  dachsburgring_weichen.json  delete_everything  docker-compose.yml  infra_dab.py  pylintrc  pyproject.toml  try_neo4j.py
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
cypher/: edge.py  generate.py  node.py  weiche_typ.py
graph_db/: __init__.py  cypher.py  db_api.py
graph_db/data_elements/: bahnhof_enum.py  edge_dc.py  edge_relation_enum.py  element_enum.py  node_dc.py  switch_item_enum.py
