[tool.poetry]
name = "graph_db"
version = "1.0.0"
description = "Graph DB and interface."
authors = [
    "Robin Delimar <robin.delimar@students.fhnw.ch>",
    "Pascal Reiss <pascal.reiss@students.fhnw.ch>"
]


[tool.poetry.dependencies]
python = "3.9.18"
numpy = "1.22.4"
pandas = "2.1.2"
pillow = "10.1.0"
matplotlib = "3.8.0"
scipy = "1.11.3"
seaborn = "0.13.0"
opencv-python = "4.8.1.78"
pyvista = "0.42.3"
trame = "3.2.8"
trame-vuetify = "2.3.1"
trame-vtk = "2.5.9"
ipykernel = "6.26.0"
ipywidgets = "8.1.1"
neo4j = "5.15.0"

[tool.poetry.dev-dependencies]
pydocstyle = "6.3.0"
pylint = "3.0.2"
pycln = "2.3.0"
prettier = "0.0.7"
pyupgrade = "3.15.0"
isort = "5.12.0"
black = "23.10.1"
pre-commit = "3.5.0"

[build-system]
requires = ["poetry-core=1.6.1"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
multi_line_output=9
line_length=88

[tool.pycln]
all = true

[tool.pytest.ini_options]
filterwarnings = ["error"]
